fix: update cells to include ids as index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,6 +68,10 @@ container {
     display: none;
 }
 
+.visible {
+    display: block;
+}
+
                                         /* Buttons */
 
 #buttons {
