docs: add table of contents and general outline to readme file

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,7 +85,7 @@ button {
     padding: 10px;
     border-radius: 10px;
     box-shadow: 3px 3px black;
-    font-family: Gloria Hallelujah, sans-serif;
+    font-family: "Gloria Hallelujah", sans-serif;
     font-size: 1em;
     cursor: pointer;
 }
