--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@ body {
     height: 100vh;
     background-color: yellow;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     font-family: Gloria Hallelujah, sans-serif;
 }
 
@@ -28,7 +28,7 @@ h2 {
     color: red;
 }
 
-container {
+/* container {
     margin: auto;
     display: flex;
     flex-direction: column;
@@ -37,7 +37,42 @@ container {
     background-color: aquamarine;
     border-radius: 10px;
     box-shadow: 3px 3px black;
-} 
+}  */
+
+section {
+    margin: auto;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: aquamarine;
+    border-radius: 10px;
+    box-shadow: 3px 3px black;
+}
+                                        /* Popup Form Styles */
+form {
+    background-color: blue;
+    margin: 20px 50px;
+}
+
+form div {
+    text-align: left;
+    margin: 10px;
+    display: flex;
+    flex-direction: column;
+}
+
+form h2 {
+    font-size: 120%;
+    text-transform: none;
+    text-align: center;
+    margin-top: 10px;
+}
+
+#popup-feedback {
+    display: none;
+}
 
                                         /* Game Area */
 
@@ -93,5 +128,13 @@ button {
 button:hover {
     background-color: black;
     color: white;
+}
+
+#close-feedback-button {
+    padding: 5px;
+    border-radius: 50%;
+    position: absolute;
+    top: -40px;
+    right: -30px;
 }
 
