--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,13 +10,24 @@
 
 body {
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
     background-color: yellow;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     font-family: Gloria Hallelujah, sans-serif;
+}
+
+header {
+    position: fixed;
+    width: 100%;
+}
+
+footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
 }
 
 h1 {
@@ -30,17 +41,6 @@ h2 {
     color: red;
 }
 
-/* container {
-    margin: auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: aquamarine;
-    border-radius: 10px;
-    box-shadow: 3px 3px black;
-}  */
-
 section {
     margin: 10px auto;
     position: relative;
@@ -52,6 +52,13 @@ section {
     border-radius: 10px;
     box-shadow: 3px 3px black;
 }
+
+li {
+    list-style: none;
+    text-align: center;
+}
+
+
                                         /* Popup Styles */
 form {
     background-color: blue;
@@ -78,10 +85,10 @@ form h2,
     display: none;
  }
 
-#popup-instructions li {
+/* #popup-instructions li {
     list-style: none;
     text-align: center;
-}
+} */
 
 
 
