--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,19 +20,19 @@ body {
 }
 
 header {
-    position: fixed;
     width: 100%;
+    display: flex;
+    justify-content: center;
 }
 
 footer {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: baseline;
 }
 
 h1 {
     text-align: center;
-    margin-top: 20px;
 }
 
 h2 {
@@ -54,8 +54,19 @@ section {
 }
 
 li {
-    list-style: none;
+    list-style-type: none;
     text-align: center;
+}
+
+i {
+    color: black;
+}
+
+#social-networks {
+    width: 500px;
+    font-size: 1.5em;
+    display: flex;
+    justify-content: space-between;
 }
 
 
@@ -149,12 +160,8 @@ button:hover {
     color: white;
 }
 
-#close-instructions-button {
-/*     padding: 5px;
-    border-radius: 50%;
-    position: absolute;
-    top: -40px;
-    right: -30px; */
+#feedback-button {
+    align-self: flex-end;
 }
 
 /* Media Query: laptops and larger screens (992px and up)
