--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@
 body {
     width: 100vw;
     min-height: 100vh;
-    background-color: yellow;
+    background-color: #d6dac8;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -38,11 +38,12 @@ h1 {
 h2 {
     font-size: 150%;
     text-transform: uppercase;
-    color: red;
+    color: #fbf3d5;
+    font-weight: bolder;
 }
 
 section {
-/*     max-width: 100vw;
+/*  max-width: 100vw;
     margin: 10px auto; */
     margin: 20px;
     padding: 20px;  
@@ -51,7 +52,7 @@ section {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: aquamarine;
+    background-color: #9cafaa;
     border-radius: 10px;
     box-shadow: 3px 3px black;
 }
@@ -74,7 +75,7 @@ i {
 
                                         /* Popup Styles */
 form {
-    background-color: pink;
+    background-color: #efbc9b;
     margin: 20px 50px;
     justify-content: center;
     width: auto;
@@ -103,7 +104,7 @@ form h2,
                                         /* Game Area */
 
 #board {
-    background-color: blue;
+    background-color: #d6dac8;
     margin: 20px 50px;
     display: grid;
     grid-template-columns: repeat(3, auto);
@@ -132,7 +133,7 @@ form h2,
 }
 
 .cell:hover {
-    background-color: pink;
+    background-color: #efbc9b;
     opacity: 0.5;
 }
 
@@ -169,6 +170,7 @@ button {
     margin: 20px;
     padding: 10px;
     border-radius: 10px;
+    background-color: #d6dac8;
     box-shadow: 3px 3px black;
     font-family: "Gloria Hallelujah", sans-serif;
     font-size: 1em;
@@ -177,11 +179,11 @@ button {
 
 button:hover {
     background-color: black;
-    color: white;
+    color: #fbf3d5;
 }
 
 button i:hover {                                        /* how to make the image switch colors when the button is hovered, not just the image ?*/
-    color: white;
+    color: #fbf3d5;
 }
 
 /* Media Query: laptops and larger screens (992px and up)
