--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,6 +76,17 @@ i {
     justify-content: space-between;
 }
 
+img {
+    max-width: 100vw;
+    margin: 100vh;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+    text-align: center;
+}
+
                                         /* Popup Styles */
 form {
     background-color: #986C6A;
