--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,12 +79,17 @@ i {
 img {
     max-width: 100vw;
     margin: 100vh;
+    margin: 0;
 }
 
 a {
     text-decoration: none;
-    color: black;
+    color: #475B63;
     text-align: center;
+}
+
+a:hover {
+    text-decoration: underline;
 }
 
                                         /* Popup Styles */
