--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,14 +19,22 @@ body {
     font-family: Gloria Hallelujah, sans-serif;
 }
 
+main {
+    flex: 1 0 auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
 header {
     width: 100%;
+    margin: 10px;
     display: flex;
     justify-content: center;
 }
 
 footer {
     width: 100%;
+    margin: 10px;
     display: flex;
     justify-content: space-evenly;
     align-items: baseline;
@@ -209,7 +217,7 @@ by Patricia Nicole Opetina on dev.to */
 .buttons2 {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 button {
