--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,28 +25,14 @@ main {
     flex: 1 0 auto;
     margin-top: 10px;
     margin-bottom: 10px;
+    display: flex;
+    align-items: center;
 }
 
 header {
     width: 100%;
-    margin: 10px;
     display: flex;
     justify-content: center;
-}
-
-section {
-    max-width: 95vw;
-    width: 400px;
-    padding: 20px; 
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: #475B63;
-    color: #E2E6EA;
-    border-radius: 10px;
-    box-shadow: 3px 3px black;
 }
 
 li {
@@ -67,99 +53,22 @@ h2 {
     font-weight: bolder;
 }
 
-/* Footer */
+/* Game Area */
 
-footer {
-    width: 100%;
-    margin: 10px;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: baseline;
-}
-
-i {
-    color: black;
-}
-
-#social-networks {
-    width: 500px;
-    font-size: 1.5em;
-    display: flex;
-    justify-content: space-between;
-}
-
-/* 404 Page */
-
-img {
-    max-width: 50vw;
-    max-height: 50vh;
-    margin: 0;
-}
-
-#h2-404 {
-    color: #986C6A;
-}
-
-a {
-    text-decoration: none;
-    color: #986C6A;
-    text-align: center;
-}
-
-a:hover {
-    text-decoration: underline;
-}
-
-/* Popup Styles */
-form {
-    background-color: #475B63;
-    margin: 20px;
-    justify-content: center;
-    width: auto;
-}
-
-form div {
-    text-align: left;
-    margin: 10px;
+#game-wrapper {
+    max-width: 95vw;
+    width: 400px;
+    padding: 20px; 
+    position: relative;
     display: flex;
     flex-direction: column;
-}
-
-form h2,
-#popup-instructions h2 {
-    font-size: 120%;
-    text-transform: none;
-    text-align: center;
-}
-
-#popup-feedback,
-#popup-instructions {
-    z-index: 5;
-    display: none;
-    position: absolute;
+    justify-content: center;
+    align-items: center;
     background-color: #475B63;
-    top: 10px;
-    left: 10px;
-    right: 10px;
-    margin: auto;
-    box-shadow: 3px 3px black;
+    color: #E2E6EA;
     border-radius: 10px;
-    border: 2px solid black;
- }
-
- #instruction-images {
-    display: flex;
-    justify-content: space-around;
- }
-
- .instruction-image {
-    width: 100px;
-    height: 100px;
-    margin-top: 10px;
-    margin-bottom: 10px;
- }
-
-/* Game Area */
+    box-shadow: 3px 3px black;
+}
 
 #board {
     background-color: #986C6A;
@@ -212,6 +121,55 @@ by Patricia Nicole Opetina on dev.to */
     display: block;
 }
 
+/* Popup Styles */
+form {
+    background-color: #475B63;
+    margin: 20px;
+    justify-content: center;
+    width: auto;
+}
+
+form div {
+    text-align: left;
+    margin: 10px;
+    display: flex;
+    flex-direction: column;
+}
+
+form h2,
+#popup-instructions h2 {
+    font-size: 120%;
+    text-transform: none;
+    text-align: center;
+}
+
+#popup-feedback,
+#popup-instructions {
+    z-index: 5;
+    display: none;
+    position: absolute;
+    background-color: #475B63;
+    top: 10px;
+    left: 10px;
+    right: 10px;
+    margin: auto;
+    box-shadow: 3px 3px black;
+    border-radius: 10px;
+    border: 2px solid black;
+ }
+
+ #instruction-images {
+    display: flex;
+    justify-content: space-around;
+ }
+
+ .instruction-image {
+    width: 100px;
+    height: 100px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+ }
+
 /* Buttons */
 
 button {
@@ -250,6 +208,49 @@ button:hover {
     right: -15px;
     z-index: 6;
     border-radius: 50%;
+}
+
+/* Footer */
+
+footer {
+    width: 100%;
+    margin: 10px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: baseline;
+}
+
+i {
+    color: black;
+}
+
+#social-networks {
+    width: 500px;
+    font-size: 1.5em;
+    display: flex;
+    justify-content: space-between;
+}
+
+/* 404 Page */
+
+img {
+    max-width: 50vw;
+    max-height: 50vh;
+    margin: 0;
+}
+
+#h2-404 {
+    color: #986C6A;
+}
+
+a {
+    text-decoration: none;
+    color: #986C6A;
+    text-align: center;
+}
+
+a:hover {
+    text-decoration: underline;
 }
 
 /* Animated Background */
@@ -340,23 +341,13 @@ button:hover {
 
 /* Media Queries */
 
-/* Media Query: tablets and larger screens (768px and up) */
-@media screen and (min-width: 768px) {
-    
-    section {
-    width: 600px;
-    margin: 10px auto;
-    margin: 20px;
-    padding: 20px;  
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: #475B63;
-    color: #E2E6EA;
-    border-radius: 10px;
-    box-shadow: 3px 3px black;
+/* Media query: large or landscape phones (576px and up) */
+@media screen and (min-width: 576px) {
+
+    #game-wrapper {
+        width: 550px;
+        margin: 10px auto;
+        padding: 20px;  
     }   
 
     #board {
@@ -364,22 +355,91 @@ button:hover {
     }
 
     .cell {
-        width: 150px;
-        height: 150px;
+        width: 165px;
+        height: 165px;
+        font-size: 6em;
+    }
+
+}
+
+/* Media Query: tablets and larger screens (768px and up) */
+@media screen and (min-width: 768px) {
+
+    h1 {
+        font-size: 200%;
+    }
+
+    #game-wrapper {
+        width: 700px;
+        margin: 10px auto;
+        padding: 20px;  
+    }   
+
+    #board {
+        margin: 20px 50px;
+    }
+
+    .cell {
+        width: 200px;
+        height: 200px;
         font-size: 7em;
     }
 
     .buttons {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+    }
 }
-  }
 
-  /* Media Query: laptops and larger screens (992px and up) */
+/* Media Query: laptops and larger screens (992px and up) */
 @media screen and (min-width: 992px) {
+
+    h1 {
+        font-size: 250%;
+    }
     
+    #game-wrapper {
+        width: 850px;
+        margin: 10px auto;
+        padding: 20px;  
+    }   
+
+    .cell {
+        width: 225px;
+        height: 225px;
+        font-size: 10em;
+    }
+
+    button {
+        font-size: 125%;
+    }
+
     #turn-tracker {
         display: none;
+    }
+}
+
+/* Media Query: large screens (1200px and up) */
+@media screen and (min-width: 1200px) {
+
+    h1 {
+        font-size: 300%;
+    }
+
+    #game-wrapper {
+        width: 900px;
+        margin: 10px auto;
+        padding: 20px;  
+    }   
+        
+    .cell {
+        width: 250px;
+        height: 250px;
+        font-size: 10em;
+    }
+
+    button {
+        font-size: 150%;
     }
 }
