--- a/assets/css/backup.css
+++ b/assets/css/backup.css
@@ -1,3 +1,5 @@
+/* Latest deployed code */
+
 /* Google Fonts Import */
 @import url('https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap');
 
@@ -23,6 +25,8 @@ body {
 
 main {
     flex: 1 0 auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
     display: flex;
     align-items: center;
 }
@@ -54,47 +58,61 @@ h2 {
 /* Game Area */
 
 #game-wrapper {
+    max-width: 95vw;
+    width: 400px;
+    padding: 20px; 
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color: #475B63;
-    padding: 50px 40px;
+    color: #E2E6EA;
     border-radius: 10px;
     box-shadow: 3px 3px black;
 }
 
 #board {
+    background-color: #986C6A;
+    margin: 20px 50px;
     display: grid;
-    grid-template-columns: repeat(3, 22vmin);
-    grid-template-rows: repeat(3, 22vmin);
-    gap: 5px;
-    place-content: center;
-    width: 90%;
-    margin: 20px auto;
+    grid-template-columns: repeat(3, auto);
+    cursor: pointer;
+    position: relative;
 }
 
 .cell {
+    width: 100px;
+    height: 100px;
+    font-size: 5em;
     display: flex;
     justify-content: center;
     align-items: center;
-    border: none;
-    background-color: #986C6A;
-    font-size: 5em;
-    color: #E2E6EA;
+    border-right: 3px solid;
+    border-bottom: 3px solid;
+}
+
+/* The code to remove the outher borders has been adapted from an article
+by Patricia Nicole Opetina on dev.to */
+.cell:nth-child(3n) {
+    border-right: none;
+}
+
+.cell:nth-child(6) ~ .cell {
+    border-bottom: none;
 }
 
 /* The code for the preview-hover function has been adapted from Codebrainer */
 .x-hover:hover::after {
     content: "X";
     opacity: 0.2;
-    color: #E2E6EA;
+    color: white;
 }
   
 .o-hover:hover::after {
     content: "O";
     opacity: 0.2;
-    color: #E2E6EA;
+    color: white;
 }
 
 .hidden {
@@ -198,25 +216,26 @@ button:hover {
 
 footer {
     width: 100%;
-    display: flex;
-    align-items: baseline;
-    margin-top: 10px;
-}
-
-#social-networks {
-    width: 100%;
-    font-size: 1.5em;
+    margin: 10px;
     display: flex;
     justify-content: space-evenly;
+    align-items: baseline;
 }
 
 i {
     color: black;
 }
 
+#social-networks {
+    width: 500px;
+    font-size: 1.5em;
+    display: flex;
+    justify-content: space-between;
+}
+
 /* 404 Page */
 
-#img-404 {
+img {
     max-width: 50vw;
     max-height: 50vh;
     margin: 0;
@@ -322,53 +341,107 @@ a:hover {
     }
   }
 
-  /* Media Queries */
-  @media screen and (max-width: 480px) {
+/* Media Queries */
+
+/* Media query: large or landscape phones (576px and up) */
+@media screen and (min-width: 576px) {
+
     #game-wrapper {
-        padding: 30px;
+        width: 550px;
+        margin: 10px auto;
+        padding: 20px;  
+    }   
+
+    #board {
+        margin: 20px 50px;
+    }
+
+    .cell {
+        width: 165px;
+        height: 165px;
+        font-size: 6em;
+    }
+
+}
+
+/* Media Query: tablets and larger screens (768px and up) */
+@media screen and (min-width: 768px) {
+
+    h1 {
+        font-size: 200%;
+    }
+
+    #game-wrapper {
+        width: 700px;
+        margin: 10px auto;
+        padding: 20px;  
+    }   
+
+    #board {
+        margin: 20px 50px;
+    }
+
+    .cell {
+        width: 200px;
+        height: 200px;
+        font-size: 7em;
+    }
+
+    .buttons {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
     }
 }
 
-  @media screen and (min-width: 576px) {
-    .buttons {
-        flex-direction: row;
-    }
+/* Media Query: laptops and larger screens (992px and up) */
+@media screen and (min-width: 992px) {
 
     h1 {
-        font-size: 400%;
+        font-size: 250%;
     }
-  
-    footer {
-        font-size: 150%;
-    }
-  }
+    
+    #game-wrapper {
+        width: 850px;
+        margin: 10px auto;
+        padding: 20px;  
+    }   
 
-  @media screen and (min-width: 768px) {
+    .cell {
+        width: 225px;
+        height: 225px;
+        font-size: 10em;
+    }
+
     button {
         font-size: 125%;
-    }
-  }
-
-  @media screen and (min-width: 992px) {
-    button {
-        font-size: 150%;
     }
 
     #turn-tracker {
         display: none;
     }
-
-    #game-wrapper {
-        padding: 60px 80px;
-    }
 }
 
-  @media screen and (min-width: 1200px) {
-    button {
-        font-size: 175%;
+/* Media Query: large screens (1200px and up) */
+@media screen and (min-width: 1200px) {
+
+    h1 {
+        font-size: 300%;
     }
 
     #game-wrapper {
-        padding: 80px 100px;
+        width: 900px;
+        margin: 10px auto;
+        padding: 20px;  
+    }   
+        
+    .cell {
+        width: 250px;
+        height: 250px;
+        font-size: 10em;
     }
-  }
+
+    button {
+        font-size: 150%;
+    }
+}
